...
                                doCase(t),
                                it.selection
                            )
                        }
                    },
                    modifier = Modifier.fillMaxWidth()
                        .testTag("LettersField")
                        .focusRequester(focusRequester),
                    trailingIcon = @Composable {
                        if (textValue.text == "") null else
                        IconButton(onClick = { textValue = TextFieldValue()}) {
                            Icon(
                                painter = painterResource(R.drawable.cancel_24),
...
                    modifier = Modifier.fillMaxWidth()
                ) {
                    Button(
                        onClick = {
                            doValid(textValue.text)
                        },
                        modifier= Modifier.testTag("Ok")
                    ) {
                        Text(context.getString(R.string.ok))
                    }
                    Spacer(Modifier.weight(1f))
                    Button(
                        onClick = { doClose() },
...
